# trees_adversarial_detector

./: .mailmap  README.md  datasets.py  embedding_proc.py  evaluation.py  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  tree_models.py
docs/: README.md
trees_adversarial_detector/: attack.py  boosting_detector.py  datasets.py  embedding_model.py  embedding_proc.py  evaluation.py  full_experiment_flow.py  leafs_model.py  lt_attack_samples.py  tree_models.py
trees_adversarial_detector/tree_ensemble_attack/: =1.66
trees_adversarial_detector/tree_ensemble_attack/baselines/: HSJA.py  OPT_attack_lf.py  Sign_OPT_cpu.py  cube_attack.py  galb_test_attacks.py  models_cpu.py
