[tool.poetry]
name = "trees_adversarial_detector"
version = "0.1.0"
description = "A project to detect adversarial attacks on tree-based models"
authors = ["Gal Braun <galbraun@gmail.com>", "Seffi Cohen <seffi@post.bgu.ac.il>", "Lior Rokach <liorrk@post.bgu.ac.il>"]
license = "MIT"
packages = [
    { include = "trees_adversarial_detector", from = "." },
]

[tool.poetry.dependencies]
art = "6.4"
bokeh = "3.6.2"
deslib = "0.3.7"
gurobipy = "12.0.0"
holoviews = "1.20.0"
joblib = "1.4.2"
matplotlib = "3.10.0"
numpy = "<2.0"
pandas = "2.2.3"
python_on_whales = "0.75.1"
pytorch_lightning = "2.5.0.post0"
scikit_learn = "1.6.1"
scipy = "1.15.1"
seaborn = "0.13.2"
tensorflow = "2.18.0"
torch = "2.5.1"
tqdm = "4.67.1"
umap = "0.1.1"
xgboost = "2.1.3"
faiss-cpu = { version = "1.9.0", optional = true }
faiss-gpu = { version = "1.9.0", optional = true }

[tool.poetry.extras]
cpu = ["faiss-cpu"]
gpu = ["faiss-gpu"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

